--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorPrimaryR">#DFDDC7</color>
+    <color name="colorPrimaryDarkR">#211717</color>
+    <color name="colorAccentR">#F58B54</color>
+
+    <item name="black" type="color">#000000</item>
+    <item name="navy" type="color">    #000080</item>
+    <item name="darkblue" type="color">#00008b</item>
+    <item name="mediumblue" type="color">#0000cd</item>
+    <item name="blue" type="color">#0000ff</item>
+    <item name="midnightblue" type="color">#191970</item>
 </resources>
